fix: menu text-overflow

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -362,11 +362,6 @@ $icon-font-path: '../icon-font' !default;
   }
 
   .vjs-menu {
-    .vjs-menu-content {
-      min-width: 10em;
-      width: auto;
-      padding: 0.2em 0;
-    }
     .vjs-selected {
       background: none;
       color: var(--color-text);
@@ -379,6 +374,11 @@ $icon-font-path: '../icon-font' !default;
       font-size: 0.9em;
       padding: 0 1em;
       line-height: 2em;
+      .vjs-menu-item-text {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        min-width: 0;
+      }
     }
     &:has(.vjs-selected) {
       .vjs-menu-item {
